modify: docker config by daemon.json '

--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -3,10 +3,10 @@ FROM    debian:bullseye
 EXPOSE  3306
 
 RUN     apt-get update && \
-RUN     apt-get upgrade && \
+        apt-get upgrade && \
         apt-get -y install mariadb-server mariadb-client && \
         mkdir -p /var/run/mysqld && \
-        chown mysql:mysql /var/run/mysqld &&
+        chown mysql:mysql /var/run/mysqld && \
         apt-get -y install dumb-init
 
 COPY    ./conf/my.cnf /etc/mysql/my.cnf
