--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,16 +1,16 @@
-FROM    	debian:bullseye
+FROM		debian:bullseye
 
-EXPOSE  	3306
+EXPOSE		3306
 
-RUN     	apt-get update && \
-        	apt-get upgrade && \
-        	apt-get install -y mariadb-server mariadb-client && \
-        	mkdir -p /var/run/mysqld && \
-        	chown mysql:mysql /var/run/mysqld && \
-        	apt-get install -y dumb-init
+RUN		apt-get update && \
+		apt-get upgrade && \
+		apt-get install -y mariadb-server mariadb-client vim && \
+		mkdir -p /var/run/mysqld && \
+		chown mysql:mysql /var/run/mysqld && \
+		apt-get install -y dumb-init
 
-COPY    	./conf/my.cnf /etc/mysql/my.cnf
-COPY    	./tools/entry.sh /
+COPY		./conf/my.cnf /etc/mysql/my.cnf
+COPY		./tools/entry.sh /
 
 RUN		chmod +x entry.sh
 
